# bfmc_2024

./: .gitignore  README.md  REQUIREMENTS.txt  brain.py  car.py  car_pi.py  car_sim.py  controller.py  controllerSP.py  deitalks.py  environmental_data_simulator.py  lane_keeping_example.py  main_brain.py  mpc_tests.py  path_planning.py  path_planning2.py  sim_data_generation2.py  tests.ipynb  tests.py  tests2.ipynb
Simulator/: README.md  recompile.sh  set_2024_map.sh  set_test_map.sh
Simulator/src/example/src/: RcBrainThread.py  camera.py  control.py  visualizer.py
Simulator/src/models_pkg/camera/: model.sdf
Simulator/src/models_pkg/camera_top/: model.sdf
Simulator/src/models_pkg/car/: model.sdf
Simulator/src/models_pkg/car_bare/: model.sdf
Simulator/src/models_pkg/rcCar_assembly_bare/: model.sdf
Simulator/src/plugins_pkgs/pose_plugin/: CMakeLists.txt  package.xml
Simulator/src/plugins_pkgs/pose_plugin/include/: pose_plugin.hpp
Simulator/src/plugins_pkgs/pose_plugin/src/: pose_plugin.cpp
Simulator/src/utils/: CMakeLists.txt
detection/: __init__.py  stopline.py
sparcs/: create_path.py  sparcs_data_generation.py  sparcs_pi.py  vicon.py
stuff/: Competition_track_graph.graphml  Competition_track_graph_corrected.graphml  Competition_track_graph_corrected_old.graphml  __init__.py  event_points.txt  event_types.txt  final_graph.graphml  hw.txt  int_in.txt  int_mid.txt  int_out.txt  names_and_constants.py  ra_in.txt  ra_mid.txt  sign_points.txt  sign_types.txt  stop_line.txt  track_graph.graphml  track_graph_corrected.graphml
(+23 files in other folders)
